# bardecoder

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: image_benches.rs
src/: chomp.rs  decode.rs  decoder.rs  detect.rs  lib.rs  point.rs  qr.rs
src/algorithm/: extract.rs  grayscale.rs  mod.rs  threshold.rs
src/algorithm/decode/: galois.rs  mod.rs
src/algorithm/locate/: linescan.rs  mod.rs
src/decode/: mod.rs  qr.rs
src/decode/qr/: blocks.rs  correct.rs  data.rs  decoder.rs  format.rs  galois.rs  mod.rs
src/detect/: linescan.rs  mod.rs
src/extract/: mod.rs  qr.rs
src/extract/qr/: mod.rs
src/prepare/: blockedmean.rs  mod.rs
src/qr/: blocks.rs  correct.rs  data.rs  format.rs  mod.rs
src/util/: chomp.rs  macros.rs  mod.rs  point.rs  qr.rs
tests/: image_tests.rs
