[package]
name = "bardecoder"
version = "0.2.3"
authors = ["Mark Arts <piderman+github@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/piderman314/bardecoder"
homepage = "https://github.com/piderman314/bardecoder"
keywords = ["qr"]
categories = ["encoding","multimedia::images"]
exclude = ["/.travis.yml", "/tests/*"]
description = """
Detect and decode QR Codes
"""

[dependencies]
image = ">= 0.22, <= 0.23"
log = "0.4"
failure = "0.1"
failure_derive = "0.1"
newtype_derive = "0.1"

[features]
default=[]
debug-images=[]
fail-on-warnings=[]
benchmark=[]

[badges]
travis-ci = { repository = "piderman314/bardecoder" }
