[package]
name = "bardecoder"
version = "0.4.0"
authors = ["Mark Arts <piderman+github@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/piderman314/bardecoder"
homepage = "https://github.com/piderman314/bardecoder"
keywords = ["qr"]
categories = ["encoding","multimedia::images"]
exclude = ["/.travis.yml", "/tests/*"]
description = """
Detect and decode QR Codes
"""

[dependencies]
anyhow = "1.0.66"
image = "0.24"
log = "0.4"
newtype_derive = "0.1"
thiserror = "1.0.37"

[features]
default=[]
debug-images=[]
fail-on-warnings=[]
benchmark=[]

[badges]
travis-ci = { repository = "piderman314/bardecoder" }
